# pycopdem

./: README.md  environment.yml  pyproject.toml
conda/: meta.yaml
pycopdem/: __init__.py  copdem.py  derive.py  download_terrain.py  grid.py  paths.py  store.py
