[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycopdem"
version = "0.1.0"
description = "Cached Copernicus 30 m DEM windows with on-read terrain derivatives — download once per chunk, never twice"
readme = "README.md"
authors = [
  { name = "Borevitz Lab, Australian National University" },
  { name = "Yasar Adeel Ansari", email = "u6737670@anu.edu.au" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
  "dem",
  "copernicus",
  "elevation",
  "terrain",
  "topography",
  "twi",
  "geospatial",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
# The geospatial stack (rasterio, pysheds, xarray, zarr, …) is provided by
# conda via environment.yml; only the lab core is declared here so
# `pip install -e .` is fast and doesn't re-resolve it.
dependencies = [
  "attrs",
  "borevitz-lab",
  "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/thestochasticman/pycopdem"
Repository = "https://github.com/thestochasticman/pycopdem"
Issues = "https://github.com/thestochasticman/pycopdem/issues"

[tool.setuptools.packages.find]
include = ["pycopdem", "pycopdem.*"]
